--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                     <li><a href="#" class="nav__link 
                     nav__link--primary">Books</a></li>
                 </ul>
-           
-            <button class="btn__menu" onclick="openMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <div class="menu__backdrop">
-                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-                    <i class="fa-solid fa-xmark"></i>
+
+                <button class="btn__menu" onclick="openMenu()">
+                    <i class="fa-solid fa-bars"></i>
                 </button>
-                <ul class="menu__links">
-                    <li class="menu__list"><a href=""  class="menu__link" onclick="closeMenu()">Home</a></li>
-                    <li class="menu__list"><a href="" class="menu__link" >Books</a></li>
-                    <li class="menu__list"><a href="" class="menu__link">Contacts</a></li>
-                </ul>
+                <div class="menu__backdrop">
+                    <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                    <ul class="menu__links">
+                        <li class="menu__list"><a href="" class="menu__link" onclick="closeMenu()">Home</a></li>
+                        <li class="menu__list"><a href="" class="menu__link">Books</a></li>
+                        <li class="menu__list"><a href="" class="menu__link">Contacts</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </nav>
         <header>
             <div class="header__contianer">
@@ -187,15 +187,186 @@
                 </div>
             </div>
         </section>
-
         <section id="recent">
             <div class="container">
                 <div class="row">
 
+                    <h2 class="section__title">Recent <span class="red">Books</span></h2>
+
+                    <div class="books">
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book--img__wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                BookTitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                            <div class="book_price">
+                                <span class="book__price--normal">$50.95</span> $14.95
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="explore">
+            <div class="row">
+                <div class="container__explore">
+                    <h1 class="section__title black">Explore more <span class="red">books</span></h1>
+                    <button class="btn">Browse Books</button>
                 </div>
             </div>
         </section>
     </main>
+    <footer id="footer">
+        <div class="row">
+            <div class="container__footer">
+                <img src="./assets/Library.svg" alt="" class="logo__footer">
+                <ul class="">
+                    <li><a href="" class="footer__link">Home</a></li>
+                    <li><a href="" class="footer__link">About</a></li>
+                    <li><a href="" class="footer__link">Books</a></li>
+                    <li><a href="" class="footer__link">Contact</a></li>
+                </ul>
+                <span class="copyright">Copyright &copy 2021 Libary</span>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="./index.js"></script>
+
 </html>
